--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ svg {
 .Grouping-styles__overlay {
     border-style: solid !important;
     margin: 1px !important;
-    box-shadow: -1px 1px 11px 1px white;
+    box-shadow: -1px 1px 11px 1px white !important;
 }
