--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+:root {
+    --canvas-style-bgc: rgb(46, 46, 46);
+}
+
 * {
-    background-color: rgb(46, 46, 46) !important;
+    background-color: var(--canvas-style-bgc) !important;
     color: white !important;    
     border-color: white !important;
     background-image: none !important;
@@ -20,7 +24,7 @@ svg {
 
 .Grouping-styles__title::after {
     display: none !important;
-}
+} 
 
 .Grouping-styles__title {
     background-color: rgba(0, 0, 0, 0) !important;
@@ -29,4 +33,18 @@ svg {
 .Grouping-styles__overlay {
     border-style: solid !important;
     box-shadow: -1px 1px 11px 1px white !important;
+}
+
+.CompletedItemsFacade-styles__root {
+    border: none !important;
+}
+
+.PlannerItem-styles__root {
+    border: none !important;
+}
+
+ol.Grouping-styles__items {
+    margin-left: 15px !important;
+    border: 2px solid white !important;
+    box-shadow: 0px 2px 10px 0px white !important;
 }
