--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 :root {
     --canvas-style-bgc: rgb(46, 46, 46);
+    --canvas-border-radius: 15px;
 }
 
-* {
+:not(.Grouping-styles__overlay, .ic-DashboardCard__header_hero, .ic-DashboardCard__header_image) {
     background-color: var(--canvas-style-bgc) !important;
     color: white !important;    
     border-color: white !important;
     background-image: none !important;
-    border-radius: 15px !important;
+    border-radius: var(--canvas-border-radius) !important;
 }
 
 a {
@@ -26,6 +27,10 @@ svg {
     display: none !important;
 } 
 
+.event-details::after {
+    display: none !important;
+}
+
 .Grouping-styles__title {
     background-color: rgba(0, 0, 0, 0) !important;
 }
@@ -33,6 +38,7 @@ svg {
 .Grouping-styles__overlay {
     border-style: solid !important;
     box-shadow: -1px 1px 11px 1px white !important;
+    border-radius: var(--canvas-border-radius) !important;
 }
 
 .CompletedItemsFacade-styles__root {
@@ -47,4 +53,8 @@ ol.Grouping-styles__items {
     margin-left: 15px !important;
     border: 2px solid white !important;
     box-shadow: 0px 2px 10px 0px white !important;
+}
+
+.NotificationBadge-styles__activityIndicator.NotificationBadge-styles__hasBadge {
+    background-color: rgba(0, 0, 0, 0) !important;
 }
